opam-version: "2.0"
name: "x25519-dalek"
version: "0.1.0"
synopsis: "OCaml bindings to the dalek rust library"
maintainer: "davidwong.crypto@gmail.com"
authors: "davidwong.crypto@gmail.com"
license: "Apache-2.0"
homepage: "https://github.com/mimoo/dalek-ocaml"
bug-reports: "davidwong.crypto@gmail.com"
depends: [
  "ocaml" {>= "4.12"}
  "dune" {>= "2.8"}
  "core_kernel" {>= "0.14"}
  "ppx_jane" {>= "0.14"}
  "ppx_inline_test" {>= "v0.14"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mimoo/dalek-ocaml.git"
